US_PSW-8648 CLONE - Mosaic Dashboard - UI
add search

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,2 +1,1 @@
-<mosaic-page-header title="Pageheader Title" subtitle="Pageheader subtitle">
-</mosaic-page-header>
+<dashboard-ui-search-product></dashboard-ui-search-product>
