US_PSW-8648 CLONE - Mosaic Dashboard - UI
add marketplace news

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,6 @@
 <mosaic-navigation>
   <mosaic-title>Title</mosaic-title>
+  <mosaic-button icon="home" routerLink="/home">Home</mosaic-button>
   <mosaic-button icon="bug">
     <span>Bugs</span>
     <mosaic-badge color="light" pill>810</mosaic-badge>
