--- a/src/app/components/search-product/search-product.component.html
+++ b/src/app/components/search-product/search-product.component.html
@@ -1,7 +1,19 @@
-<mosaic-card>
+<mosaic-card color="white">
   <mosaic-card-body>
-    <mosaic-search-input name="search-product" block placeholder="Search Product..." valid-text="This is some valid text" invalid-text="This is some invalid text" value="{{value}}">
-      <mosaic-button icon="search" color="primary" (click)="search()">Search</mosaic-button>
-    </mosaic-search-input>
+    <mosaic-row>
+      <mosaic-col sm="6">
+        <mosaic-search-input name="search-product" block placeholder="Search Product..." valid-text="This is some valid text" invalid-text="This is some invalid text" value="{{value}}">
+          <mosaic-button icon="search" color="primary" (click)="search()">Search</mosaic-button>
+        </mosaic-search-input>
+      </mosaic-col>
+      <mosaic-col sm="6">
+        <mosaic-button-group block class="my-2">
+          <mosaic-button icon="shopping_basket" outline>Saved Basket</mosaic-button>
+          <mosaic-button icon="star" outline>Favourite Products</mosaic-button>
+        </mosaic-button-group>
+      </mosaic-col>
+    </mosaic-row>
+    <mosaic-button anchor>Browse by Category</mosaic-button>
+    <mosaic-button anchor>Browse by Supplier</mosaic-button>
   </mosaic-card-body>
 </mosaic-card>
