US_PSW-8648 CLONE - Mosaic Dashboard - UI
create More orders option

--- a/src/app/components/search-product/search-product.component.html
+++ b/src/app/components/search-product/search-product.component.html
@@ -15,5 +15,12 @@
     </mosaic-row>
     <mosaic-button anchor>Browse by Category</mosaic-button>
     <mosaic-button anchor>Browse by Supplier</mosaic-button>
+    <mosaic-navbar-nav-item secondary-toggle class="float-right" (click)="toggleSidebar()">
+      <mosaic-button icon="shopping_basket">
+        More orders
+      </mosaic-button>
+    </mosaic-navbar-nav-item>
   </mosaic-card-body>
 </mosaic-card>
+
+
