US_PSW-8648 CLONE - Mosaic Dashboard - UI
add insights

--- a/src/app/components/search-product/search-product.component.html
+++ b/src/app/components/search-product/search-product.component.html
@@ -1,12 +1,12 @@
 <mosaic-card color="white">
   <mosaic-card-body>
     <mosaic-row>
-      <mosaic-col sm="6">
+      <mosaic-col md="8">
         <mosaic-search-input name="search-product" block placeholder="Search Product..." valid-text="This is some valid text" invalid-text="This is some invalid text" value="{{value}}">
           <mosaic-button icon="search" color="primary" (click)="search()">Search</mosaic-button>
         </mosaic-search-input>
       </mosaic-col>
-      <mosaic-col sm="6">
+      <mosaic-col md="4">
         <mosaic-button-group block class="my-2">
           <mosaic-button icon="shopping_basket" outline>Saved Basket</mosaic-button>
           <mosaic-button icon="star" outline>Favourite Products</mosaic-button>
