--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,10 +2,10 @@
 <mosaic-row class="row">
   <mosaic-col md="12">
     <dashboard-ui-marketplace-news></dashboard-ui-marketplace-news>
+    <dashboard-ui-insights></dashboard-ui-insights>
   </mosaic-col>
 
   <mosaic-col class="more-orders-sidebar" md="3" [@slideHorizontalInOut]="isShowingMoreOrders? 'in': 'out'">
     <dashboard-ui-more-order-types></dashboard-ui-more-order-types>
   </mosaic-col>
-
 </mosaic-row>
