--- a/src/app/components/marketplace-news/marketplace-news.component.html
+++ b/src/app/components/marketplace-news/marketplace-news.component.html
@@ -33,8 +33,18 @@
         </mosaic-card-body>
       </mosaic-card>
       <mosaic-card nested>
+        <h6 class="mx-1 my-1">SUPPLIER OFFER</h6>
+        <img src="https://via.placeholder.com/318x180" alt="Card image cap">
         <mosaic-card-body>
-          <mosaic-button anchor>View More</mosaic-button>
+          <P>07 Jan 2020</P>
+          <h5>HOT UK DEALS</h5>
+          <p>Ultra Special Discount</p>
+          <mosaic-button>View</mosaic-button>
+        </mosaic-card-body>
+      </mosaic-card>
+      <mosaic-card nested color="light">
+        <mosaic-card-body align="center">
+          <mosaic-button anchor>View all marketplace news</mosaic-button>
         </mosaic-card-body>
       </mosaic-card>
     </mosaic-card-deck>
