US_PSW-8648 CLONE - Mosaic Dashboard - UI
add catalogue update

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,6 +3,7 @@
   <mosaic-col md="12">
     <dashboard-ui-marketplace-news></dashboard-ui-marketplace-news>
     <dashboard-ui-insights></dashboard-ui-insights>
+    <dashboard-ui-marketplace-update></dashboard-ui-marketplace-update>
   </mosaic-col>
 
   <mosaic-col class="more-orders-sidebar" md="3" [@slideHorizontalInOut]="isShowingMoreOrders? 'in': 'out'">
