--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -4,6 +4,7 @@
     <dashboard-ui-marketplace-news></dashboard-ui-marketplace-news>
     <dashboard-ui-insights></dashboard-ui-insights>
     <dashboard-ui-marketplace-update></dashboard-ui-marketplace-update>
+    <dashboard-ui-recent-purchases></dashboard-ui-recent-purchases>
   </mosaic-col>
 
   <mosaic-col class="more-orders-sidebar" md="3" [@slideHorizontalInOut]="isShowingMoreOrders? 'in': 'out'">
