US_PSW-8648 CLONE - Mosaic Dashboard - UI
add manage orders

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,6 +5,7 @@
     <dashboard-ui-insights></dashboard-ui-insights>
     <dashboard-ui-marketplace-update></dashboard-ui-marketplace-update>
     <dashboard-ui-recent-purchases></dashboard-ui-recent-purchases>
+    <dashboard-ui-manage-orders></dashboard-ui-manage-orders>
   </mosaic-col>
 
   <mosaic-col class="more-orders-sidebar" md="3" [@slideHorizontalInOut]="isShowingMoreOrders? 'in': 'out'">
