US_PSW-8648 CLONE - Mosaic Dashboard - UI
add search results page

--- a/src/app/components/marketplace-news/marketplace-news.component.html
+++ b/src/app/components/marketplace-news/marketplace-news.component.html
@@ -9,7 +9,7 @@
           <P>07 Jan 2020</P>
           <h5>HOT UK DEALS</h5>
           <p>Ultra Special Discount</p>
-          <mosaic-button>View</mosaic-button>
+          <mosaic-button block outline size="sm">View</mosaic-button>
         </mosaic-card-body>
       </mosaic-card>
       <mosaic-card nested>
@@ -19,7 +19,7 @@
           <P>07 Jan 2020</P>
           <h5>HOT UK DEALS</h5>
           <p>Ultra Special Discount</p>
-          <mosaic-button>View</mosaic-button>
+          <mosaic-button block outline size="sm">View</mosaic-button>
         </mosaic-card-body>
       </mosaic-card>
       <mosaic-card nested>
@@ -29,7 +29,7 @@
           <P>07 Jan 2020</P>
           <h5>HOT UK DEALS</h5>
           <p>Ultra Special Discount</p>
-          <mosaic-button>View</mosaic-button>
+          <mosaic-button block outline size="sm">View</mosaic-button>
         </mosaic-card-body>
       </mosaic-card>
       <mosaic-card nested>
@@ -39,7 +39,7 @@
           <P>07 Jan 2020</P>
           <h5>HOT UK DEALS</h5>
           <p>Ultra Special Discount</p>
-          <mosaic-button>View</mosaic-button>
+          <mosaic-button block outline size="sm">View</mosaic-button>
         </mosaic-card-body>
       </mosaic-card>
       <mosaic-card nested color="light">
