--- a/src/app/views/search-product-result/search-product-result.component.html
+++ b/src/app/views/search-product-result/search-product-result.component.html
@@ -1,1 +1,10 @@
-<p>search-product-result works!</p>
+<mosaic-container>
+  <mosaic-row>
+    <mosaic-col md="3">
+      <dashboard-ui-search-filter></dashboard-ui-search-filter>
+    </mosaic-col>
+    <mosaic-col md="9">
+      <dashboard-ui-search-results></dashboard-ui-search-results>
+    </mosaic-col>
+  </mosaic-row>
+</mosaic-container>
